[package]
name = "nuklear-backend-gdi"
version = "0.1.2"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["widgets", "gui", "interface", "graphics", "gdi"]
description = "A WinAPI GDI drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-gdi.git"
homepage = "https://github.com/snuk182/nuklear-backend-gdi"

[lib]
name = "nuklear_backend_gdi"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
nuklear-rust = "~0.3"

[dependencies.winapi]
path = "../winapi-rs"
# git = "https://github.com/retep998/winapi-rs"
branch = "dev"
#version = "^0.3.0"
features = ["winbase", "wingdi", "winnls", "winuser", "xxx"]
default-features = false

[dependencies.image]
version = "~0.12"
optional = true

[features]
default = ["own_window"]
piston_image = ["image"]
own_window = []
